# mfem

./: .appveyor.yml  .bazel.bzl  .bazelignore  .bazelrc  .bazelrc-cc  .clang-format  .codecov.yml  .coveralls.yml  .gitattributes  .gitignore  .gitlab-ci-quartz.yml  .gitlab-ci.yml  .travis.yml  BUILD  CHANGELOG  CHANGELOG.this  CITATION.cff  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  GNUmakefile  INSTALL  LICENSE  MFEM-meshref.config  MFEM-meshref.files  MODULE.bazel  NOTICE  README  README-DOCKER.md  README-proteus.md  README.md  README.mfem-pumi-install  SConstruct  SECURITY.md  TMOP-AMR-SIZE.includes  TMOP-AMR.files  buildMFEMRAJA.sh  (+53 more)
doc/: CMakeLists.txt  CodeDocumentation.conf  CodeDocumentation.conf.in  CodeDocumentation.dox  README  makefile
doc/css/: customization.css  doxygen-awesome.css
doc/html/: header.html
doc/web/: base.css  bootstrap-mfem.min.css
examples/: ._MFEM_adv.cpp  ._ex9p.cpp  ._makefile  .gitignore  AddSchwarz.cpp  BestApprox.cpp  BestApproxp.cpp  CMakeLists.txt  DiffusionSpMv.cpp  ExampleSlot2.cpp  GenerateMFEMMesh.cpp  MFEM_adv.cpp  MG_ex5p.cpp  MMA.hpp  MMA_serial.hpp  ParMeshGenViz4D.cpp  README.html  SConstruct  TRgutsp.cpp  adv.cpp  advection.cpp  advection_adaptive.cpp  advection_href.cpp  advection_href_reference_estimator.cpp  advection_pref.cpp  advectionp.cpp  amg_pcg.json  amg_tests.cpp  amgx_ex.cpp  amgx_ex16p.cpp  amgx_ex1p.cpp  amgx_ex1p_coeffs.cpp  amgx_ex4p.cpp  amgx_ex_orig.cpp  amgx_exclusive_ex1p.cpp  amgx_teams_ex1p.cpp  amr-battery.cpp  anderson.hpp  aniso-laplace.cpp  aniso_Sovinec_4.2_std.cpp  (+654 more)
examples/ComplexMG/: NDtest.cpp  complex_mgtest.cpp  makefile  mg.cpp  mg.hpp  mgtest.cpp  schwarz.cpp  schwarz.hpp
examples/MeshPart/: makefile  mesh_partition.cpp  mesh_partition.hpp  test1.cpp  test1p.cpp  test2.cpp  test_mesh_partition.cpp
examples/README_files/: formula.repository  index.html
examples/Smoother/: BlkAMS.cpp  BlkAMS.hpp  BlkSchwarzp.cpp  BlkSchwarzp.hpp  FOSLS2D_maxwell.cpp  FOSLS_maxwell.cpp  FOSLS_maxwellp.cpp  Multigrid.cpp  Multigrid.hpp  Schwarz.cpp  Schwarz.hpp  Schwarz_backup.cpp  Schwarzp.cpp  Schwarzp.hpp  blkams.cpp  blkams.hpp  blkschwarzp.cpp  blkschwarzp.hpp  ex1_smoother.cpp  ex1p.cpp  helmholtz.cpp  helmholtzPrimalDPG.cpp  makefile  maxwell.cpp  maxwell_real.cpp  maxwellp_real.cpp  mpi_tests.cpp  multigrid.cpp  multigrid.hpp  petscrc_mult_options  schwarz.cpp  schwarz.hpp  schwarzp.cpp  schwarzp.hpp  util.cpp  util.hpp
examples/acrotensor/: ex1.cpp  makefile
examples/amgx/: CMakeLists.txt  README  SampleOutput.md  amg_pcg.json  amgx_ex1.cpp  amgx_ex1p.cpp  amgx_ex_orig.cpp  ex1.cpp  ex1_json.cpp  ex1p.cpp  ex1p_json.cpp  makefile  multi_gs.json  precon.json
examples/arpack/: ex11.cpp  makefile
examples/atpesc/: convergence.cpp  makefile
examples/caliper/: CMakeLists.txt  README  ex1.cpp  ex1p.cpp  makefile
examples/contact/: DirichletObstacleProblem.cpp  DirichletObstacleProblemVariant.cpp  IPsolver.cpp  IPsolver.hpp  ObstacleProblem.cpp  ParIPsolver.cpp  ParIPsolver.hpp  ParObstacleProblem.cpp  ParProblems.cpp  ParProblems.hpp  ParSphericalObstacleProblem.cpp  Problems.cpp  Problems.hpp  README.md  SphericalObstacleProblem.cpp  TwoSidedDirichletObstacleProblem.cpp  exQPContactBlockTL.cpp  makefile  nodepair.hpp  obstacleProblem.cpp  problems.cpp  problems.hpp  rotatedblock2.mesh
examples/contactexpress/: explicitp.cpp  makefile
examples/convergeTest/: 3D-H1-conv.cpp  convergence.cpp  makefile  ref-for-convergence.cpp  tensorVsSrdp.cpp
examples/cudss/: CMakeLists.txt  ex1p.cpp  makefile
examples/dfem/: CMakeLists.txt  cxxtimer.hpp  dfem.hpp  dfem_action_callback.icc  dfem_assemble_hypreparmatrix.icc  dfem_assemble_vector.icc  dfem_derivative_callback.icc  dfem_differentiable_operator.hpp  dfem_element_operator.hpp  dfem_fieldoperator.hpp  dfem_integrate.hpp  dfem_interpolate.hpp  dfem_parametricspace.hpp  dfem_qfunction.hpp  dfem_qfunction_dual.hpp  dfem_refactor.hpp  dfem_refactor_action.hpp  dfem_refactor_derivatives.hpp  dfem_smm.hpp  dfem_test_macro.hpp  dfem_util.hpp  diffusion3d.cpp  kernels_pa.hpp  laghos.cpp  makefile  minimal_surface.cpp  noisy.hpp  old_derivative_action_callback.icc  plasticity.cpp  rectangle01_quad.mesh  shared_mem_calc.md  tuple.hpp
examples/dpg_tests/: block_primal_dpg.cpp  convection_diffusion.cpp  convection_diffusionp.cpp  diffusion_primal_dpg.cpp  diffusion_uwdpg.cpp  diffusion_uwdpg_2.cpp  ejproblem.cpp  grad_div_primal_dpg.cpp  lshape2.mesh  makefile  pdiffusion_uwdpg.cpp
examples/epic/: CMakeLists.txt  README  ex16.cpp  ex16p.cpp  makefile
examples/fd/: element-smoother.cpp  element-smoother.hpp  ex_amr_diffusionp.cpp  ex_diffusionp.cpp  exact_sol.cpp  exact_sol.hpp  l-shape-benchmark.mesh  makefile  smoother-util.cpp  smoother-util.hpp
examples/functional/: CMakeLists.txt  elasticity.hpp  ex0.cpp  ex0p.cpp  ex1.cpp  ex1p.cpp  ex2.cpp  ex2p.cpp  ex3.cpp  ex3p.cpp  ex4p.cpp  ex5p.cpp  hess.hpp  myad.hpp  remap.hpp
examples/ginkgo/: CMakeLists.txt  README  amgx.json  ex1.cpp  ex1coeff.cpp  ex1lor.cpp  ex1lorcoeff.cpp  ex1p.cpp  ex1tetlorcoeff.cpp  makefile  multigridpc.hpp
examples/glvis/: CMakeLists.txt  README  ex0.cpp  ex0p.cpp  makefile
examples/gslib/: README  RT2D.mesh  compare.cpp  exp.cpp  exs.cpp  makefile
examples/gslib_findpts/: README  exp.cpp  exs.cpp  findpts_mfem.h  fpt_wrapper.hpp  makefile
examples/hdg/: CMakeLists.txt  README  ex14.cpp  ex14p.cpp  ex17.cpp  ex17p.cpp  ex21.cpp  ex21p.cpp  ex41.cpp  ex41p.cpp  ex5.cpp  ex5p.cpp  ex6.cpp  ex6p.cpp  makefile
examples/hiop/: CMakeLists.txt  README  ex9.cpp  ex9p.cpp  makefile
examples/href_exs/: href_exs.cpp
examples/ipopt/: CMakeLists.txt  README  block2.mesh  contact.cpp  exContactBlockTL.cpp  exContactBlockTL.hpp  makefile  nodepair.hpp
examples/jupyter/: README.md  ex.ipynb
examples/loading-gs-to-mhd/: .clangd  .gitignore  B_field_norm_B0.cpp  B_field_projector_B_pol_vec_CG.cpp  B_field_projector_B_tor_CG.cpp  B_field_projector_B_tor_DG.cpp  (+30 more)
miniapps/: CMakeLists.txt  README.md
tests/: CMakeLists.txt
(+8081 files in other folders)
